<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#f0f0f0"
    android:padding="16dp">

    <!-- Image at the top with the name 'Chat' -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/chat"
    android:contentDescription="@string/chat_logo"
    android:layout_gravity="center" />

    <TextView
        android:id="@+id/chat_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        android:textSize="24sp"
        android:textColor="#6200EE"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center" />

    <!-- Email input field -->
    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:textColorHint="#757575"
        android:padding="12dp"
        android:background="@drawable/edittext_style"/>

    <!-- Password input field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="Password"
        android:textColorHint="#757575"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_style"/>

    <!-- Login button -->
    <Button
        android:id="@+id/continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:background="@drawable/button_style"
        android:textColor="#ffffff"/>

    <!-- Create account link -->
    <TextView
        android:id="@+id/move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:text="Don't have an account? Create here"
        android:layout_marginTop="16dp" />

</LinearLayout>
